--- a/index-german.html
+++ b/index-german.html
@@ -179,96 +179,10 @@
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <div class="icon-top-draculady">
-          <img
-            src="./Icons/Draculady-icon.webp"
-            alt="Draculady code logo"
-            loading="lazy"
-          />
-        </div>
-        <h1 data-text="Kathrin Peled">
-          Kathrin Peled <br />
-          Web Developer
-        </h1>
-        <nav>
-          <ul>
-            <li class="dropdown">
-              <a href="./index-german.html" aria-label="Homepage">Home</a>
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a href="./index-german.html#about" aria-label="About"
-                    >Über mich</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./Pages/resume-german.html"
-                    aria-label="Ineractive Resume Book"
-                    >Mein Lebenslauf</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./Pages/files-german.html"
-                    aria-label="Download my files and documents"
-                    >Meine Dateien</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="index-german.html#portfolio" aria-label="Portfolio"
-                >Portfolio</a
-              >
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a
-                    href="index-german.html#skills"
-                    aria-label="Skills and Tools"
-                    >Fähigkeiten und Werkzeuge</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./Pages/portfolio-german.html#projects-heading"
-                    aria-label="All Projects"
-                    >Alle Projekte</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./Pages/portfolio-german.html#1st-module"
-                    aria-label="Basic Projects"
-                    >Grundlegende Projekte</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./Pages/portfolio-german.html#2nd-module"
-                    aria-label="JavaScript projects section"
-                    >JS Projekte</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="./Pages/contact-german.html" aria-label="Contact"
-                >Kontakt</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <div class="icon-draculady">
-          <img
-            src="./Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-      </div>
-    </header>
+    <!-- * header -->
+    <script src="./ScriptsComponents/headerLoader.js"></script>
+    <div id="header"></div>
+    <!-- * header -->
     <main
       class="main-index-german"
       role="main"
@@ -704,11 +618,13 @@
           </div>
         </div>
       </section>
-            <!-- * hire me -->
-            <div id="smiley"></div>
-            <script src="./ScriptsComponents/smileyLoader.js"></script>
-            <!-- * hire me -->
+      <!-- * hire me -->
+      <div id="smiley"></div>
+      <script src="./ScriptsComponents/smileyLoader.js"></script>
+      <!-- * hire me -->
+      <!-- * back to top -->
       <script src="./ScriptsComponents/backToTopLoader.js"></script>
+      <!-- * back to top -->
 
       <div class="languages">
         <a href="./index.html" aria-label="Change Language to English">
