--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -176,90 +176,10 @@
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <div class="icon-top-draculady">
-          <img
-            src="../Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-        <h1 data-text="Kathrin Peled">
-          Kathrin Peled <br />
-          Web Developer
-        </h1>
-        <nav>
-          <ul>
-            <li class="dropdown">
-              <a href="../index.html" aria-label="About">Home</a>
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a href="../index.html#about" aria-label="About">About</a>
-                </li>
-                <li>
-                  <a
-                    href="./resume-english.html"
-                    aria-label="Ineractive Resume Book"
-                    >My Resume</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./files-english.html"
-                    aria-label="Download my files and documents"
-                    >My Files</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="../index.html#portfolio" aria-label="Portfolio"
-                >Portfolio</a
-              >
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a href="../index.html#skills" aria-label="Skills and tools"
-                    >Skills and tools</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-english.html#projects-heading"
-                    aria-label="All projects"
-                    >All projects</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-english.html#1st-module"
-                    aria-label="Basic projects"
-                    >Basic projects</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-english.html#2nd-module"
-                    aria-label="JavaScript projects section"
-                    >JS projects</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="./contact-english.html" aria-label="Contact">Contact</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="icon-draculady">
-          <img
-            src="../Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-      </div>
-    </header>
+    <!-- * header -->
+    <script src="../ScriptsComponents/headerLoader.js"></script>
+    <div id="header"></div>
+    <!-- * header -->
     <main
       class="main-contact-english"
       role="main"
@@ -773,7 +693,9 @@
           </div>
         </div>
       </section>
+      <!-- * back to top -->
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
+      <!-- * back to top -->
 
       <div class="languages">
         <a href="./contact-german.html" aria-label="Change Language to German">
@@ -785,13 +707,12 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
-      
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-        <!--* Footer -->
-        <div id="footer"></div>
-        <script src="../ScriptsComponents/footerLoader.js" async></script>
-        <!--* Footer -->
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="../ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
