--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -169,98 +169,10 @@
   </head>
 
   <body>
-    <header>
-      <div class="container">
-        <div class="icon-top-draculady">
-          <img
-            src="../Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-        <h1 data-text="Kathrin Peled">
-          Kathrin Peled <br />
-          Web Developer
-        </h1>
-        <nav>
-          <ul>
-            <li class="dropdown">
-              <a href="../index-german.html" aria-label="Homepage">Home</a>
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a href="../index-german.html#about" aria-label="About"
-                    >Über mich</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./resume-german.html"
-                    aria-label="Ineractive Resume Book"
-                    >Mein Lebenslauf</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./files-german.html"
-                    aria-label="Download my files and documents"
-                    >Meine Dateien</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="../index-german.html#portfolio" aria-label="Portfolio"
-                >Portfolio</a
-              >
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a
-                    href="../index-german.html#skills"
-                    aria-label="Skills and Tools"
-                    >Fähigkeiten und Werkzeuge</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="../Pages/portfolio-german.html#projects-heading"
-                    aria-label="All Projects"
-                    >Alle Projekte</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="../Pages/portfolio-german.html#1st-module"
-                    aria-label="Basic Projects"
-                    >Grundlegende Projekte</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="../Pages/portfolio-german.html#2nd-module"
-                    aria-label="JavaScript projects section"
-                    >JS Projekte</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a
-                href="../Pages/contact-german.html#contact"
-                aria-label="Contact"
-                >Kontakt</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <div class="icon-draculady">
-          <img
-            src="../Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-      </div>
-    </header>
+    <!-- * header -->
+    <script src="../ScriptsComponents/headerLoader.js"></script>
+    <div id="header"></div>
+    <!-- * header -->
     <main
       class="main-contact-german"
       role="main"
@@ -774,7 +686,9 @@
           </div>
         </div>
       </section>
+      <!-- * back to top -->
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
+      <!-- * back to top -->
 
       <div class="languages">
         <a
@@ -789,13 +703,13 @@
         </a>
       </div>
       <div class="custom-cursor"></div>
-    
+
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-        <!--* Footer -->
-        <div id="footer"></div>
-        <script src="../ScriptsComponents/footerLoader.js" async></script>
-        <!--* Footer -->
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="../ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js" async></script>
