--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -177,96 +177,10 @@
   </head>
 
   <body>
-    <header>
-      <div class="container">
-        <div class="icon-top-draculady">
-          <img
-            src="../Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-        <h1 data-text="Kathrin Peled">
-          Kathrin Peled <br />
-          Web Developer
-        </h1>
-        <nav>
-          <ul>
-            <li class="dropdown">
-              <a href="../index-german.html" aria-label="Homepage">Home</a>
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a href="../index-german.html#about" aria-label="About"
-                    >Über mich</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./resume-german.html"
-                    aria-label="Ineractive Resume Book"
-                    >Mein Lebenslauf</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./files-german.html"
-                    aria-label="Download my files and documents"
-                    >Meine Dateien</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="../index-german.html#portfolio" aria-label="Portfolio"
-                >Portfolio</a
-              >
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a
-                    href="../index-german.html#skills"
-                    aria-label="Fähigkeiten und Werkzeuge"
-                    >Fähigkeiten und Werkzeuge</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-german.html#projects-heading"
-                    aria-label="Alle Projekte"
-                    >Alle Projekte</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-german.html#1st-module"
-                    aria-label="Grundlegende Projekte"
-                    >Grundlegende Projekte</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-german.html#2nd-module"
-                    aria-label="JavaScript projects section"
-                    >JS Projekte</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="./contact-german.html#contact" aria-label="Kontakt"
-                >Kontakt</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <div class="icon-draculady">
-          <img
-            src="../Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-      </div>
-    </header>
+    <!-- * header -->
+    <script src="../ScriptsComponents/headerLoader.js"></script>
+    <div id="header"></div>
+    <!-- * header -->
     <main
       class="main-portfolio-german"
       role="main"
@@ -1650,7 +1564,9 @@
           </div>
         </div>
       </section>
+      <!-- * back to top -->
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
+      <!-- * back to top -->
       <!-- * hire me -->
       <div id="smiley"></div>
       <script src="../ScriptsComponents/smileyLoader.js"></script>
