--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -168,96 +168,10 @@
   </head>
 
   <body>
-    <header>
-      <div class="container">
-        <div class="icon-top-draculady">
-          <img
-            src="../Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-        <h1 data-text="Kathrin Peled">
-          Kathrin Peled <br />
-          Web Developer
-        </h1>
-        <nav>
-          <ul>
-            <li class="dropdown">
-              <a href="../index-german.html" aria-label="Homepage">Home</a>
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a href="../index-german.html#about" aria-label="About"
-                    >Über mich</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./resume-german.html"
-                    aria-label="Ineractive Resume Book"
-                    >Mein Lebenslauf</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./files-german.html"
-                    aria-label="Download my files and documents"
-                    >Meine Dateien</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="../index-german.html#portfolio" aria-label="Portfolio"
-                >Portfolio</a
-              >
-              <ul class="dropdown-portfolio">
-                <li>
-                  <a
-                    href="../index-german.html#skills"
-                    aria-label="Fähigkeiten und Werkzeuge"
-                    >Fähigkeiten und Werkzeuge</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-german.html#projects-heading"
-                    aria-label="Alle Projekte"
-                    >Alle Projekte</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-german.html#1st-module"
-                    aria-label="Grundlegende Projekte"
-                    >Grundlegende Projekte</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="./portfolio-german.html#2nd-module"
-                    aria-label="JavaScript projects section"
-                    >JS Projekte</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="./contact-german.html#contact" aria-label="Kontakt"
-                >Kontakt</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <div class="icon-draculady">
-          <img
-            src="../Icons/Draculady-icon.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
-        </div>
-      </div>
-    </header>
+    <!-- * header -->
+    <script src="../ScriptsComponents/headerLoader.js"></script>
+    <div id="header"></div>
+    <!-- * header -->
     <main
       class="main-resume-german"
       role="main"
@@ -932,20 +846,22 @@
           />
         </a>
       </div>
+      <!-- * back to top -->
       <script src="../ScriptsComponents/backToTopLoader.js"></script>
+      <!-- * back to top -->
 
       <div class="custom-cursor"></div>
-           <!-- * hire me -->
-           <div id="smiley"></div>
-           <script src="../ScriptsComponents/smileyLoader.js"></script>
-           <!-- * hire me -->
+      <!-- * hire me -->
+      <div id="smiley"></div>
+      <script src="../ScriptsComponents/smileyLoader.js"></script>
+      <!-- * hire me -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
 
-        <!--* Footer -->
-        <div id="footer"></div>
-        <script src="../ScriptsComponents/footerLoader.js" async></script>
-        <!--* Footer -->
+    <!--* Footer -->
+    <div id="footer"></div>
+    <script src="../ScriptsComponents/footerLoader.js" async></script>
+    <!--* Footer -->
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/resume.js" async></script>
     <script src="../Scripts/transfer-resume.js" async></script>
