corrections of comments

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -693,9 +693,9 @@
           </div>
         </div>
       </section>
-      <!-- * back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js"></script>
-      <!-- * back to top -->
+      <!-- ~ back to top -->
+      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <!-- ~ back to top -->
 
       <div class="languages">
         <a href="./contact-german.html" aria-label="Change Language to German">
@@ -706,7 +706,10 @@
           />
         </a>
       </div>
+            <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
+            <!-- ~ custom curser -->
+
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
     <!--* Footer -->
