--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1537,13 +1537,13 @@
           </div>
         </div>
       </section>
-      <!-- * back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js"></script>
-      <!-- * back to top -->
-      <!-- * hire me -->
+      <!-- ~ back to top -->
+      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <!-- ~ back to top -->
+      <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="../ScriptsComponents/smileyLoader.js"></script>
-      <!-- * hire me -->
+      <script src="../ScriptsComponents/smileyLoader.js" async></script>
+      <!-- ^ hire me -->
       <div class="languages">
         <a
           href="./portfolio-german.html"
@@ -1556,7 +1556,9 @@
           />
         </a>
       </div>
+      <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
+      <!-- ~ custom curser -->
 
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
