--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1564,13 +1564,13 @@
           </div>
         </div>
       </section>
-      <!-- * back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js"></script>
-      <!-- * back to top -->
-      <!-- * hire me -->
+      <!-- ~ back to top -->
+      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <!-- ~ back to top -->
+      <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="../ScriptsComponents/smileyLoader.js"></script>
-      <!-- * hire me -->
+      <script src="../ScriptsComponents/smileyLoader.js" async></script>
+      <!-- ^ hire me -->
       <div class="languages">
         <a
           href="./portfolio-english.html"
@@ -1583,15 +1583,17 @@
           />
         </a>
       </div>
+      <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
+      <!-- ~ custom curser -->
 
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-
     <!--* Footer -->
     <div id="footer"></div>
     <script src="../ScriptsComponents/footerLoader.js" async></script>
     <!--* Footer -->
+
     <script src="../Scripts/toggle-german.js" async></script>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
