--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -359,6 +359,9 @@
           </div>
         </div>
       </div>
+      <!-- ~ custom curser -->
+      <div class="custom-cursor"></div>
+      <!-- ~ custom curser -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
     <script src="../Scripts/script.js" async></script>
