--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -686,9 +686,9 @@
           </div>
         </div>
       </section>
-      <!-- * back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js"></script>
-      <!-- * back to top -->
+      <!-- ~ back to top -->
+      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <!-- ~ back to top -->
 
       <div class="languages">
         <a
@@ -702,7 +702,9 @@
           />
         </a>
       </div>
+      <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
+      <!-- ~ custom curser -->
 
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
