--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -766,18 +766,18 @@
           />
         </a>
       </div>
-      <!-- * back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js"></script>
-      <!-- * back to top -->
-
+      <!-- ~ back to top -->
+      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <!-- ~ back to top -->
+      <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
-      <!-- * hire me -->
+      <!-- ~ custom curser -->
+      <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="../ScriptsComponents/smileyLoader.js"></script>
-      <!-- * hire me -->
+      <script src="../ScriptsComponents/smileyLoader.js" async></script>
+      <!-- ^ hire me -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
-
     <!--* Footer -->
     <div id="footer"></div>
     <script src="../ScriptsComponents/footerLoader.js" async></script>
