--- a/index-german.html
+++ b/index-german.html
@@ -618,13 +618,13 @@
           </div>
         </div>
       </section>
-      <!-- * hire me -->
+      <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="./ScriptsComponents/smileyLoader.js"></script>
-      <!-- * hire me -->
-      <!-- * back to top -->
-      <script src="./ScriptsComponents/backToTopLoader.js"></script>
-      <!-- * back to top -->
+      <script src="./ScriptsComponents/smileyLoader.js" async></script>
+      <!-- ^ hire me -->
+      <!-- ~ back to top -->
+      <script src="./ScriptsComponents/backToTopLoader.js" async></script>
+      <!-- ~ back to top -->
 
       <div class="languages">
         <a href="./index.html" aria-label="Change Language to English">
@@ -635,7 +635,9 @@
           />
         </a>
       </div>
+      <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
+      <!-- ~ custom curser -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
     <!--* Footer -->
