--- a/index.html
+++ b/index.html
@@ -597,13 +597,13 @@
           </div>
         </div>
       </section>
-      <!-- * hire me -->
+      <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="./ScriptsComponents/smileyLoader.js"></script>
-      <!-- * hire me -->
-      <!-- * back to top -->
-      <script src="./ScriptsComponents/backToTopLoader.js"></script>
-      <!-- * back to top -->
+      <script src="./ScriptsComponents/smileyLoader.js" async></script>
+      <!-- ^ hire me -->
+      <!-- ~ back to top -->
+      <script src="./ScriptsComponents/backToTopLoader.js" async></script>
+      <!-- ~ back to top -->
       <div class="languages">
         <a href="./index-german.html" aria-label="Change Language to German">
           <img
@@ -614,7 +614,9 @@
         </a>
       </div>
       <!-- <div class="languages" id="language-switcher"></div> -->
+      <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
+      <!-- ~ custom curser -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
     <!--* Footer -->
