corrections of comments

--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -847,14 +847,14 @@
         </a>
       </div>
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="../ScriptsComponents/smileyLoader.js" async></script>
+      <script src="../ScriptsComponents/smileyLoader.js" ></script>
       <!-- ^ hire me -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
