--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -694,7 +694,7 @@
         </div>
       </section>
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
 
       <div class="languages">
