--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -687,7 +687,7 @@
         </div>
       </section>
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
 
       <div class="languages">
