--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1565,11 +1565,11 @@
         </div>
       </section>
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" async></script>
+      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="../ScriptsComponents/smileyLoader.js" async></script>
+      <script src="../ScriptsComponents/smileyLoader.js" ></script>
       <!-- ^ hire me -->
       <div class="languages">
         <a
