--- a/index-german.html
+++ b/index-german.html
@@ -620,10 +620,10 @@
       </section>
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="./ScriptsComponents/smileyLoader.js" async></script>
+      <script src="./ScriptsComponents/smileyLoader.js" ></script>
       <!-- ^ hire me -->
       <!-- ~ back to top -->
-      <script src="./ScriptsComponents/backToTopLoader.js" async></script>
+      <script src="./ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
 
       <div class="languages">
