--- a/index.html
+++ b/index.html
@@ -599,10 +599,10 @@
       </section>
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="./ScriptsComponents/smileyLoader.js" async></script>
+      <script src="./ScriptsComponents/smileyLoader.js" ></script>
       <!-- ^ hire me -->
       <!-- ~ back to top -->
-      <script src="./ScriptsComponents/backToTopLoader.js" async></script>
+      <script src="./ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
       <div class="languages">
         <a href="./index-german.html" aria-label="Change Language to German">
