languages button component - index

--- a/index-german.html
+++ b/index-german.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-page="index-german">
+<html lang="de" data-page="index german">
   <head>
     <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
@@ -626,7 +626,7 @@
       <script src="./ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
 
-      <div class="languages">
+      <!-- <div class="languages">
         <a href="./index.html" aria-label="Change Language to English">
           <img
             src="./Language Logos/English_Logo.webp"
@@ -634,7 +634,11 @@
             alt="Change Language to Enlish"
           />
         </a>
-      </div>
+      </div> -->
+            <!-- ^languages switcher -->
+            <div class="languages" id="language-switcher"></div>
+            <script src="./ScriptsComponents/languageSwitcher.js"></script>
+            <!-- ^languages switcher -->
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
