--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-page="index-english">
+<html lang="en" data-page="index english">
   <head>
     <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
@@ -599,12 +599,12 @@
       </section>
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="./ScriptsComponents/smileyLoader.js" ></script>
+      <script src="./ScriptsComponents/smileyLoader.js"></script>
       <!-- ^ hire me -->
       <!-- ~ back to top -->
-      <script src="./ScriptsComponents/backToTopLoader.js" ></script>
+      <script src="./ScriptsComponents/backToTopLoader.js"></script>
       <!-- ~ back to top -->
-      <div class="languages">
+      <!-- <div class="languages">
         <a href="./index-german.html" aria-label="Change Language to German">
           <img
             src="./Language Logos/German_Logo.webp"
@@ -612,8 +612,13 @@
             alt="Change Language to German"
           />
         </a>
-      </div>
+      </div> -->
       <!-- <div class="languages" id="language-switcher"></div> -->
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="./ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
+
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
