languages button components

--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-page="contact-german">
+<html lang="de" data-page="contact german">
   <head>
     <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
@@ -687,21 +687,12 @@
         </div>
       </section>
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
       <!-- ~ back to top -->
-
-      <div class="languages">
-        <a
-          href="./contact-english.html"
-          aria-label="Change Language to English"
-        >
-          <img
-            src="../Language Logos/English_Logo.webp"
-            alt="Change Language to Enlish"
-            loading="lazy"
-          />
-        </a>
-      </div>
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
