--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-page="files-german">
+<html lang="de" data-page="files german">
   <head>
     <!-- Character encoding declaration -->
     <meta charset="UTF-8" />
@@ -271,15 +271,10 @@
           </div>
         </div>
       </section>
-      <div class="languages">
-        <a href="./files-english.html" aria-label="Sprache auf Englisch ändern">
-          <img
-            src="../Language Logos/English_Logo.webp"
-            loading="lazy"
-            alt="Sprache auf Englisch ändern"
-          />
-        </a>
-      </div>
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ back to top -->
       <script src="../ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
