--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-page="portfolio-english">
+<html lang="en" data-page="portfolio english">
   <head>
     <!-- Character set for the document -->
     <meta charset="UTF-8" />
@@ -1544,18 +1544,10 @@
       <div id="smiley"></div>
       <script src="../ScriptsComponents/smileyLoader.js" ></script>
       <!-- ^ hire me -->
-      <div class="languages">
-        <a
-          href="./portfolio-german.html"
-          aria-label="Change Language to German"
-        >
-          <img
-            src="../Language Logos/German_Logo.webp"
-            loading="lazy"
-            alt="Change Language to German"
-          />
-        </a>
-      </div>
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
