--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-page="resume-english">
+<html lang="en" data-page="resume english">
   <head>
     <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
@@ -838,15 +838,10 @@
           </div>
         </div>
       </div>
-      <div class="languages">
-        <a href="./resume-german.html" aria-label="Change Language to German">
-          <img
-            src="../Language Logos/German_Logo.webp"
-            loading="lazy"
-            alt="Change Language to German"
-          />
-        </a>
-      </div>
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ back to top -->
       <script src="../ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
