--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-page="resume-mobile-german">
+<html lang="de" data-page="resumemobile german">
   <head>
     <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
@@ -754,18 +754,10 @@
         </div>
         <!-- closer book -->
       </div>
-      <div class="languages">
-        <a
-          href="./resume-mobile-english.html"
-          aria-label="Change Language to English"
-        >
-          <img
-            src="../Language Logos/English_Logo.webp"
-            alt="Change Language to Englisch"
-            loading="lazy"
-          />
-        </a>
-      </div>
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ back to top -->
       <script src="../ScriptsComponents/backToTopLoader.js" ></script>
       <!-- ~ back to top -->
