--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-page="contact-english">
+<html lang="en" data-page="contact english">
   <head>
     <!-- Character encoding -->
     <meta charset="UTF-8" />
@@ -694,21 +694,15 @@
         </div>
       </section>
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
       <!-- ~ back to top -->
-
-      <div class="languages">
-        <a href="./contact-german.html" aria-label="Change Language to German">
-          <img
-            src="../Language Logos/German_Logo.webp"
-            loading="lazy"
-            alt="Change Language to German"
-          />
-        </a>
-      </div>
-            <!-- ~ custom curser -->
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
+      <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
-            <!-- ~ custom curser -->
+      <!-- ~ custom curser -->
 
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
