--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-page="portfolio-german">
+<html lang="de" data-page="portfolio german">
   <head>
     <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
@@ -1565,24 +1565,16 @@
         </div>
       </section>
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
       <!-- ~ back to top -->
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="../ScriptsComponents/smileyLoader.js" ></script>
+      <script src="../ScriptsComponents/smileyLoader.js"></script>
       <!-- ^ hire me -->
-      <div class="languages">
-        <a
-          href="./portfolio-english.html"
-          aria-label="Sprache auf Englisch ändern"
-        >
-          <img
-            src="../Language Logos/English_Logo.webp"
-            loading="lazy"
-            alt="Sprache auf Englisch ändern"
-          />
-        </a>
-      </div>
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
