--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-page="resume-german">
+<html lang="de" data-page="resume german">
   <head>
     <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
@@ -837,24 +837,19 @@
           </div>
         </div>
       </div>
-      <div class="languages">
-        <a href="./resume-english.html" aria-label="Change Language to English">
-          <img
-            src="../Language Logos/English_Logo.webp"
-            loading="lazy"
-            alt="Change Language to German"
-          />
-        </a>
-      </div>
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
       <!-- ~ back to top -->
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="../ScriptsComponents/smileyLoader.js" ></script>
+      <script src="../ScriptsComponents/smileyLoader.js"></script>
       <!-- ^ hire me -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
