--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-page="resume-mobile-english">
+<html lang="en" data-page="resumemobile english">
   <head>
     <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
@@ -739,27 +739,19 @@
         </div>
         <!-- closer book -->
       </div>
-      <div class="languages">
-        <a
-          href="./resume-mobile-german.html"
-          aria-label="Change Language to German"
-        >
-          <img
-            src="../Language Logos/German_Logo.webp"
-            alt="Change Language to German"
-            loading="lazy"
-          />
-        </a>
-      </div>
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="../ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ back to top -->
-      <script src="../ScriptsComponents/backToTopLoader.js" ></script>
+      <script src="../ScriptsComponents/backToTopLoader.js"></script>
       <!-- ~ back to top -->
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="../ScriptsComponents/smileyLoader.js" ></script>
+      <script src="../ScriptsComponents/smileyLoader.js"></script>
       <!-- ^ hire me -->
       <!-- <div class="sharethis-sticky-share-buttons"></div> -->
     </main>
