--- a/PagesComponents/header-de.html
+++ b/PagesComponents/header-de.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li class="dropdown">
-          <a href="./index-german.html" aria-label="Homepage">Home</a>
+          <a href="./index-german.html" aria-label="Homepage">Über</a>
           <ul class="dropdown-portfolio">
             <li>
               <a href="./index-german.html#about" aria-label="About"
