--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
   <body>
-    <!-- * header -->
-     <h1></h1>
-    <script src="./ScriptsComponents/headerLoader.js"></script>
-    <div id="header"></div>
-    <!-- * header -->
+    <h1 class="backupH1Title">Kathrin Peled Web Develoer</h1>
+      <!-- * header -->
+      <script src="./ScriptsComponents/headerLoader.js"></script>
+      <div id="header"></div>
+      <!-- * header -->
     <main
       class="main-index-english"
       role="main"
@@ -598,6 +598,12 @@
           </div>
         </div>
       </section>
+      <!-- <section class="share-button">
+        <div class="container">
+          <div id="share-container"></div>
+          <script src="./ScriptsComponents/loadShareComponent.js"></script>
+        </div>
+      </section> -->
       <!-- ^ hire me -->
       <div id="smiley"></div>
       <script src="./ScriptsComponents/smileyLoader.js"></script>
