--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -176,6 +176,7 @@
 
   <body>
     <!-- * header -->
+    <h1 class="backupH1Title">Kathrin Peled Web Develoer</h1>
     <script src="../ScriptsComponents/headerLoader.js"></script>
     <div id="header"></div>
     <!-- * header -->
