--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -169,6 +169,7 @@
 
   <body>
     <!-- * header -->
+    <h1 class="backupH1Title">Kathrin Peled Web Develoer</h1>
     <script src="../ScriptsComponents/headerLoader.js"></script>
     <div id="header"></div>
     <!-- * header -->
