--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -632,6 +632,20 @@
                   </li>
                   <li>
                     <a
+                      href="viber://chat?number=+4917685639174"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="Contact me on Viber"
+                    >
+                      <i
+                        class="fa-brands fa-viber"
+                        aria-hidden="true"
+                        title="Viber: +4917685639174"
+                      ></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a
                       href="skype:live:.cid.fa37e5044b0a120f"
                       target="_blank"
                       rel="noopener noreferrer"
