--- a/index-german.html
+++ b/index-german.html
@@ -202,152 +202,232 @@
             />
           </div>
           <div class="paragraph-div intro-paragraph">
-            <div class="p_img_1">
-              <img
-                src="./Pictures/Graduation_Technion.webp"
-                alt="Kathrin Peleds Abschluss an der Technion"
-                loading="lazy"
-              />
+            <div class="sub-menu">
+              <ul>
+                <a href="#my-education"><li>Meine Ausbildung</li></a>
+                <a href="#current-status"><li>Aktueller Status</li></a>
+                <a href="#skills-and-passion"
+                  ><li>Fähigkeiten und Leidenschaft</li></a
+                >
+                <a href="#work-experience-summary"
+                  ><li>Zusammenfassung der Berufserfahrung</li></a
+                >
+                <a href="#work-eligibility-and-future-goals"
+                  ><li>Arbeitsberechtigung und Zukunftspläne</li></a
+                >
+                <a href="#portfolio-and-contact"
+                  ><li>Portfolio und Kontakt</li></a
+                >
+              </ul>
             </div>
-            <p>
-              <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-              <span class="title-span">Meine Ausbildung</span>
-              <span class="link-span"
-                >Ich habe an der
-                <a
-                  href="https://www.pet.ac.il/"
-                  target="_blank"
-                  aria-label="National School of Practical Engineers, Israeli Institute of Technology"
-                  >National School of Practical Engineers</a
+            <div class="intro">
+              <div class="p_img_1">
+                <img
+                  src="./Pictures/Graduation_Technion.webp"
+                  alt="Kathrin Peleds Abschluss an der Technion"
+                  loading="lazy"
+                />
+              </div>
+              <p>
+                <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
+                <span id="my-education" class="title-span"
+                  >Meine Ausbildung</span
                 >
-                an der
-                <a
-                  href="https://www.technion.ac.il/en/home-2/"
-                  target="_blank"
-                  aria-label="Technion, Israeli Institute of Technology in Haifa"
-                  >Technion (Israelisches Institut für Technologie)</a
+                <span class="link-span"
+                  >Ich habe an der
+                  <a
+                    href="https://www.pet.ac.il/"
+                    target="_blank"
+                    aria-label="National School of Practical Engineers, Israeli Institute of Technology"
+                    >National School of Practical Engineers</a
+                  >
+                  an der
+                  <a
+                    href="https://www.technion.ac.il/en/home-2/"
+                    target="_blank"
+                    aria-label="Technion, Israeli Institute of Technology in Haifa"
+                    >Technion (Israelisches Institut für Technologie)</a
+                  >
+                  in Haifa studiert.</span
                 >
-                in Haifa studiert.</span
-              >
-              Dort erhielt ich 2017 mein Diplom in praktischer Softwaretechnik.
-              <br />
-              Diese grundlegende Ausbildung vermittelte mir ein solides
-              Verständnis der Prinzipien der Softwareentwicklung,
-              Problemlösungsfähigkeiten und eine Leidenschaft für Technologie.
-              <br />
-              Im Jahr 2018 zog ich nach Deutschland, um neue Möglichkeiten zu
-              suchen und eine langfristige Karriere in der Webentwicklung zu
-              verfolgen. <br />
-              <span class="link-span">
-                Ich bin derzeit Studentin am
-                <a
-                  href="https://digitalcareerinstitute.org/"
-                  target="_blank"
-                  aria-label="Digital Career Institute, studiert Webentwicklung"
-                  >Digital Career Institute (DCI)</a
+                Dort erhielt ich 2017 mein Diplom in praktischer
+                Softwaretechnik.
+                <br />
+                Diese Ausbildung vermittelte mir ein solides Verständnis der
+                Prinzipien der Softwareentwicklung, Problemlösungsfähigkeiten
+                und eine Leidenschaft für Technologie.
+                <br />
+                Im Jahr 2018 zog ich nach Deutschland, um neue Möglichkeiten zu
+                suchen und eine langfristige Karriere in der Webentwicklung zu
+                verfolgen. <br />
+                <span class="link-span">
+                  Ich bin derzeit Studentin am
+                  <a
+                    href="https://digitalcareerinstitute.org/"
+                    target="_blank"
+                    aria-label="Digital Career Institute, studiert Webentwicklung"
+                    >Digital Career Institute (DCI)</a
+                  >
+                  , wo ich Webentwicklung studiere und auch einen Deutschkurs
+                  auf C1-Niveau belege.</span
                 >
-                , wo ich Webentwicklung studiere und auch einen Deutschkurs auf
-                C1-Niveau belege.</span
-              >
-              Dieser doppelte Fokus ermöglicht es mir, meine technischen
-              Fähigkeiten zu stärken und gleichzeitig meine
-              Kommunikationsfähigkeiten in einem neuen kulturellen Umfeld zu
-              verbessern.
-              <br />
-              <br />
-              <span class="title-span">Aktueller Status </span>
-              Ich lebe in Berlin und werde meine Ausbildung zur Webentwicklerin
-              im Februar 2025 abschließen.
-              <br />
-              Meine Ausbildung am DCI hat mir Zugang zu einer Vielzahl von
-              Webtechnologien verschafft, darunter HTML, CSS, JavaScript und
-              verschiedene Frameworks. <br />
-              Ich habe Frameworks wie React, Tailwind CSS und Bootstrap gelernt,
-              die es mir ermöglicht haben, interaktive und responsive
-              Webanwendungen zu entwickeln.
-              <br />
-              <br />
-              <span class="title-span">Fähigkeiten und Leidenschaft </span>
-              Ich habe eine große Leidenschaft für Front-End-Entwicklung und
-              Design.
-              <br />
-              Ich genieße es, visuell ansprechende und benutzerfreundliche
-              Schnittstellen zu erstellen, die nahtlose Benutzererlebnisse
-              bieten.
-              <br />
-              Zu meinen Fähigkeiten gehören responsives Webdesign,
-              UI/UX-Prinzipien und die Arbeit mit Tools wie Canva und PicsArt.
-              <br />
-              Ich bin stets bestrebt, neue Technologien zu lernen und zu
-              erkunden, um in dieser schnelllebigen Branche auf dem Laufenden zu
-              bleiben.
-              <br />
-              <span class="link-span"
-                >Ich lade Sie ein, meinen
-                <a
-                  href="./Pages/resume-german.html"
-                  target="_blank"
-                  aria-label="Siehe Kathrin Peleds Lebenslauf"
-                  ><b>Lebenslauf</b></a
+                Dieser doppelte Fokus ermöglicht es mir, meine technischen
+                Fähigkeiten zu stärken und gleichzeitig meine
+                Kommunikationsfähigkeiten in einem neuen kulturellen Umfeld zu
+                verbessern.
+                <br />
+                <br />
+                <span id="current-status" class="title-span"
+                  >Aktueller Status</span
                 >
-                für einen umfassenden Überblick über meine Qualifikationen und
-                Erfahrungen zu überprüfen.</span
-              >
-              <br />
-              <span class="title-span"
-                >Arbeitsberechtigung und Zukunftspläne
-              </span>
-              Als portugiesische Staatsbürgerin, einem EU-Mitgliedstaat, bin ich
-              berechtigt, sofort ohne zusätzliche Dokumente oder Visa zu
-              arbeiten.
-              <br />
-              Nach Abschluss meiner Weiterbildung am DCI im Februar 2025 werde
-              ich entweder ein zweimonatiges Praktikum oder eine Festanstellung
-              suchen, um meine berufliche Laufbahn zu beginnen.
-              <br />
-              Dabei interessiere ich mich insbesondere für Positionen, die sich
-              auf die Front-End-Entwicklung konzentrieren, wo ich meine
-              erworbenen Fähigkeiten einbringen und von erfahrenen Fachleuten
-              lernen kann.
-              <br />
-              Mir ist bewusst, dass sich die Branche stetig weiterentwickelt.
-              Darum bin ich auf der Suche nach Weiterbildungen oder
-              Gelegenheiten für Selbststudium.
-              <br />
-              <br />
-              <span class="title-span">Portfolio und Kontakt </span>
-              <span class="link-span">
-                <a
-                  href="./Pages/portfolio-german.html"
-                  target="_blank"
-                  aria-label="Siehe Kathrin Peleds Portfolio"
-                  ><b>Hier</b></a
+                Ich lebe in Berlin und werde meine Ausbildung zur
+                Webentwicklerin im Februar 2025 abschließen.
+                <br />
+                Meine Ausbildung am DCI hat mir Zugang zu einer Vielzahl von
+                Webtechnologien verschafft, darunter HTML, CSS, JavaScript und
+                verschiedene Frameworks. <br />
+                Ich habe Frameworks wie React, Tailwind CSS und Bootstrap
+                gelernt, die es mir ermöglicht haben, interaktive und responsive
+                Webanwendungen zu entwickeln.
+                <br />
+                <br />
+                <span id="skills-and-passion" class="title-span"
+                  >Fähigkeiten und Leidenschaft</span
                 >
-                gelangen sie zu meiem Portfolio von Webentwicklungsprojekten.
-              </span>
-              <span class="link-span"
-                >Gerne lade ich potenzielle Partner und Arbeitgeber ein,
-                <a
-                  href="./Pages/contact-german.html"
-                  target="_blank"
-                  aria-label="Kontaktieren Sie Kathrin Peled"
-                  ><b>Kontakt mit mir</b></a
+                Ich habe eine große Leidenschaft für Front-End-Entwicklung und
+                Design.
+                <br />
+                Ich genieße es, visuell ansprechende und benutzerfreundliche
+                Schnittstellen zu erstellen, die nahtlose Benutzererlebnisse
+                bieten.
+                <br />
+                Zu meinen Fähigkeiten gehören responsives Webdesign,
+                UI/UX-Prinzipien und die Arbeit mit Tools wie Canva, Figma und
+                PicsArt.
+                <br />
+                Ich bin stets bestrebt, neue Technologien zu lernen und zu
+                erkunden, um in dieser schnelllebigen Branche auf dem Laufenden
+                zu bleiben.
+                <br />
+                <span class="link-span"
+                  >Ich lade Sie ein, meinen
+                  <a
+                    href="./Pages/resume-german.html"
+                    target="_blank"
+                    aria-label="Siehe Kathrin Peleds Lebenslauf"
+                    ><b>Lebenslauf</b></a
+                  >
+                  für einen umfassenden Überblick über meine Qualifikationen und
+                  Erfahrungen zu überprüfen.</span
                 >
-                aufzunehmen.</span
-              >
+                <br />
+                <span id="work-experience-summary" class="title-span"
+                  >Zusammenfassung der Berufserfahrung</span
+                >
+                Ich habe eine vielfältige Erfahrung in Kundenservice, Verkauf
+                und Datenanalyse gesammelt, die mir wertvolle Einblicke in die
+                Bedürfnisse der Nutzer gegeben hat und wie ich diese effektiv
+                erfüllen kann. <br />
+                Als Content Moderator bei Majorel in Berlin war ich dafür
+                verantwortlich, dass die Inhalte in sozialen Medien den
+                Gemeinschaftsstandards entsprechen. <br />
+                Diese Rolle hat meine Aufmerksamkeit für Details geschärft und
+                mir die Bedeutung klarer Kommunikation online nähergebracht.
+                <br />
+                Davor arbeitete ich bei Concentrix als
+                Kundenservice-Mitarbeiter, wo ich technischen Support für
+                Werbetreibende und Geschäftsinhaber bot. <br />
+                Ich bearbeitete Anfragen über Chat, E-Mail und Anrufe und half
+                den Kunden zu verstehen, wie sie ihre Werbelösungen optimal
+                nutzen können. <br />
+                Ich hatte auch einen Freelance-Job bei Proonto in einem
+                Reiseprojekt namens Issta, wo ich in Echtzeit auf Kundenanfragen
+                reagierte. <br />
+                Dieser Job lehrte mich, wie ich Kundenbeschwerden verwalte und
+                schnelle Lösungen in einem dynamischen Umfeld anbiete. <br />
+                Bevor ich in den Kundenservice einstieg, war ich Datenanalyst
+                bei Refinitiv mit Fokus auf den israelischen Aktienmarkt. <br />
+                Ich arbeitete an einem Übersetzungsprojekt, bei dem ich
+                Softwareübersetzungen korrigierte, was mir half, meine
+                analytischen Fähigkeiten zu verbessern. <br />
+                Meine frühere Erfahrung umfasst verschiedene Verkaufspositionen
+                bei G3 Communications Solutions (Celltech LTD), wo ich ein Team
+                leitete und die Kundenbeziehungen in einem Mobilfunkgeschäft
+                managte. <br />
+                Ich balancierte das tägliche Geschäft mit einem hervorragenden
+                Service für private und Geschäftskunden. <br />
+                Ich arbeitete auch bei K.S.P Computers und Cellular sowie bei
+                Top Mobile, wo ich mich auf Verkauf und Kundenservice
+                konzentrierte und Kunden bei allem half, von der Produktauswahl
+                bis zur Lösung von Rückgabeproblemen. <br />
+                Das gab mir eine solide Grundlage für das Management von
+                Kundenerfahrungen und das Verständnis des Verkaufsprozesses.
+                <br />
+                Insgesamt haben mich meine Erfahrungen mit einem breiten
+                Skillset ausgestattet, das technisches Wissen mit einem starken
+                Fokus auf Kundenzufriedenheit verbindet. <br />
+                Ich freue mich darauf, diesen Hintergrund in meine Arbeit als
+                Webentwickler einzubringen, wo ich benutzerfreundliche und
+                effektive Webanwendungen erstellen kann. <br />
+                <br />
+                <span id="work-eligibility-and-future-goals" class="title-span"
+                  >Arbeitsberechtigung und Zukunftspläne</span
+                >
+                Als portugiesische Staatsbürgerin, einem EU-Mitgliedstaat, bin
+                ich berechtigt, sofort ohne zusätzliche Dokumente oder Visa zu
+                arbeiten.
+                <br />
+                Nach Abschluss meiner Weiterbildung am DCI im Februar 2025 werde
+                ich entweder ein zweimonatiges Praktikum oder eine
+                Festanstellung suchen, um meine berufliche Laufbahn zu beginnen.
+                <br />
+                Dabei interessiere ich mich insbesondere für Positionen, die
+                sich auf die Front-End-Entwicklung konzentrieren, wo ich meine
+                erworbenen Fähigkeiten einbringen und von erfahrenen Fachleuten
+                lernen kann.
+                <br />
+                Mir ist bewusst, dass sich die Branche stetig weiterentwickelt.
+                Darum bin ich auf der Suche nach Weiterbildungen oder
+                Gelegenheiten für Selbststudium.
+                <br />
+                <br />
+                <span id="portfolio-and-contact" class="title-span"
+                  >Portfolio und Kontakt</span
+                >
+                <span class="link-span">
+                  <a
+                    href="./Pages/portfolio-german.html"
+                    target="_blank"
+                    aria-label="Siehe Kathrin Peleds Portfolio"
+                    ><b>Hier</b></a
+                  >
+                  gelangen sie zu meinem Portfolio von Webentwicklungsprojekten.
+                </span>
+                <span class="link-span"
+                  >Gerne lade ich potenzielle Partner und Arbeitgeber ein,
+                  <a
+                    href="./Pages/contact-german.html"
+                    target="_blank"
+                    aria-label="Kontaktieren Sie Kathrin Peled"
+                    ><b>Kontakt mit mir</b></a
+                  >
+                  aufzunehmen.</span
+                >
 
-              <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
-            </p>
-            <div class="p_img_2">
-              <img
-                src="./Pictures/Graduaion_Technion_2.webp"
-                alt="Kathrin Peled mit Diplom bei der Technion-Abschlussfeier"
-                loading="lazy"
-              />
+                <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
+              </p>
+              <div class="p_img_2">
+                <img
+                  src="./Pictures/Graduaion_Technion_2.webp"
+                  alt="Kathrin Peled mit Diplom bei der Technion-Abschlussfeier"
+                  loading="lazy"
+                />
+              </div>
             </div>
           </div>
         </div>
       </section>
+
       <section id="portfolio" aria-labelledby="portfolio-heading">
         <div class="container">
           <div class="h2-title">
@@ -621,15 +701,15 @@
       </section>
       <!-- ^ hire me -->
       <div id="smiley"></div>
-      <script src="./ScriptsComponents/smileyLoader.js" ></script>
+      <script src="./ScriptsComponents/smileyLoader.js"></script>
       <!-- ^ hire me -->
       <!-- ~ back to top -->
-      <script src="./ScriptsComponents/backToTopLoader.js" ></script>
+      <script src="./ScriptsComponents/backToTopLoader.js"></script>
       <!-- ~ back to top -->
-            <!-- ^languages switcher -->
-            <div class="languages" id="language-switcher"></div>
-            <script src="./ScriptsComponents/languageSwitcher.js"></script>
-            <!-- ^languages switcher -->
+      <!-- ^languages switcher -->
+      <div class="languages" id="language-switcher"></div>
+      <script src="./ScriptsComponents/languageSwitcher.js"></script>
+      <!-- ^languages switcher -->
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
