--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
   <body>
-      <!-- * header -->
-      <h1 class="backupH1Title">Kathrin Peled Web Develoer</h1>
-      <script src="./ScriptsComponents/headerLoader.js"></script>
-      <div id="header"></div>
-      <!-- * header -->
+    <!-- * header -->
+    <h1 class="backupH1Title">Kathrin Peled Web Develoer</h1>
+    <script src="./ScriptsComponents/headerLoader.js"></script>
+    <div id="header"></div>
+    <!-- * header -->
     <main
       class="main-index-english"
       role="main"
@@ -180,6 +180,7 @@
           <div class="h2-title">
             <h2 id="about-heading">About Me</h2>
           </div>
+
           <div class="profile-picture">
             <img
               src="./Pictures/Profile_Picture.webp"
@@ -188,134 +189,213 @@
             />
           </div>
           <div class="paragraph-div intro-paragraph">
-            <div class="p_img_1">
-              <img
-                src="./Pictures/Graduation_Technion.webp"
-                alt="Technion Graduation"
-                loading="lazy"
-              />
+            <div class="sub-menu">
+              <ul>
+                <a href="#my-education"><li>My Education</li></a>
+                <a href="#current-status"><li>Current Status</li></a>
+                <a href="#skills-and-passion"><li>Skills and Passion</li></a>
+                <a href="#work-experience-summary">
+                  <li>Work Experience Summary</li></a
+                >
+                <a href="#work-eligibility-and-future-goals"
+                  ><li>Work Eligibility and Future Goals</li></a
+                >
+                <a href="#portfolio-and-contact"
+                  ><li>Portfolio and Contact</li></a
+                >
+              </ul>
             </div>
-            <p>
-              <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
-              <span class="title-span">My Education</span>
-              <span class="link-span"
-                >I graduated from the
-                <a
-                  href="https://www.pet.ac.il/"
-                  target="_blank"
-                  aria-label="National School of Practical Engineers, Israeli Institute of Technology"
-                  >National School of Practical Engineers</a
-                >
-                at the
-                <a
-                  href="https://www.technion.ac.il/en/home-2/"
-                  target="_blank"
-                  aria-label="Technion, Israeli Institute of Technology in Haifa"
-                  >Technion (Israeli Institute of Technology)</a
-                >
-                in Haifa.</span
-              >
-              In 2017, I received my diploma in Software Practical Engineering.
-              <br />
-              This foundational education provided me with a solid understanding
-              of software development principles, problem-solving skills, and a
-              passion for technology.
-              <br />
-              In 2018, I moved to Germany to seek new opportunities and pursue a
-              long-term career in web development. <br />
-              <span class="link-span">
-                I am currently a student at the
-                <a
-                  href="https://digitalcareerinstitute.org/"
-                  target="_blank"
-                  aria-label="Digital Career Institute, studying Web Development"
-                  >Digital Career Institute (DCI)</a
-                >
-                , studying Web Development, and I am also taking a German
-                language course at the C1 level.</span
-              >
-              This dual focus allows me to strengthen my technical skills while
-              enhancing my communication abilities in a new cultural
-              environment.
-              <br />
-              <br />
-              <span class="title-span">Current Status </span>
-              I am based in Berlin, I am set to complete my studies as a web
-              developer in February 2025.
-              <br />
-              My education at DCI has exposed me to a wide range of web
-              technologies, including HTML, CSS, JavaScript, and various
-              frameworks. <br />
-              I have learned frameworks such as React, Tailwind CSS, and
-              Bootstrap, which have enabled me to develop interactive and
-              responsive web applications.
-              <br />
-              <br />
-              <span class="title-span">Skills and Passion </span>
-              I have a strong passion for front-end development and design.
-              <br />
-              I enjoy creating visually appealing and user-friendly interfaces
-              that provide seamless user experiences.
-              <br />
-              My skills include responsive web design, UI/UX principles, and
-              working with tools like Canva and PicsArt.
-              <br />
-              I am always eager to learn and explore new technologies to stay
-              updated in this fast-paced industry.
-              <br />
-              <span class="link-span"
-                >I invite you to review my
-                <a
-                  href="./Pages/resume-english.html"
-                  target="_blank"
-                  aria-label="See Kathrin Peleds Resume"
-                  ><b>resume</b></a
-                >
-                for a comprehensive overview of my qualifications and
-                experiences.</span
-              >
-              <br />
-              <span class="title-span">Work Eligibility and Future Goals </span>
-              As a Portuguese citizen, an EU member state, I am eligible to work
-              immediately without needing additional documents or visas.
-              <br />
-              Upon completing my Weiterbildung at DCI in February 2025, I will
-              be seeking either a two-month internship or a permanent position
-              to begin my professional journey.
-              <br />
-              I am particularly interested in roles that focus on front-end
-              development, where I can contribute my skills while learning from
-              experienced professionals.
-              <br />
-              Additionally, I am open to learning new technologies and
-              techniques related to web development to enhance my skill set and
-              adapt to the evolving industry.
-              <br />
-              <br />
-              <span class="title-span">Portfolio and Contact </span>
-              <span class="link-span"
-                >You can view my portfolio of web development projects
-                <a
-                  href="./Pages/portfolio-english.html"
-                  target="_blank"
-                  aria-label="See Kathrins Peled portfolio"
-                  ><b>here</b>.</a
-                >
-              </span>
-              <span class="link-span"
-                >I invite potential collaborators and employers to
-                <a
-                  href="./Pages/contact-english.html"
-                  target="_blank"
-                  aria-label="Contact Kathrin Peled"
-                  ><b>contact</b></a
-                >
-                me for opportunities that align with my skills and
-                aspirations.</span
-              >
+            <div class="intro">
+              <div class="p_img_1">
+                <img
+                  src="./Pictures/Graduation_Technion.webp"
+                  alt="Technion Graduation"
+                  loading="lazy"
+                />
+              </div>
 
-              <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
-            </p>
+              <p>
+                <i class="fa-solid fa-quote-left" aria-hidden="true"></i>
+                <span id="my-education" class="title-span">My Education</span>
+                <span class="link-span"
+                  >I graduated from the
+                  <a
+                    href="https://www.pet.ac.il/"
+                    target="_blank"
+                    aria-label="National School of Practical Engineers, Israeli Institute of Technology"
+                    >National School of Practical Engineers</a
+                  >
+                  at the
+                  <a
+                    href="https://www.technion.ac.il/en/home-2/"
+                    target="_blank"
+                    aria-label="Technion, Israeli Institute of Technology in Haifa"
+                    >Technion (Israeli Institute of Technology)</a
+                  >
+                  in Haifa.</span
+                >
+                In 2017, I received my diploma in Software Practical
+                Engineering.
+                <br />
+                This foundational education provided me with a solid
+                understanding of software development principles,
+                problem-solving skills, and a passion for technology.
+                <br />
+                In 2018, I moved to Germany to seek new opportunities and pursue
+                a long-term career in web development. <br />
+                <span class="link-span">
+                  I am currently a student at the
+                  <a
+                    href="https://digitalcareerinstitute.org/"
+                    target="_blank"
+                    aria-label="Digital Career Institute, studying Web Development"
+                    >Digital Career Institute (DCI)</a
+                  >
+                  , studying Web Development, and I am also taking a German
+                  language course at the C1 level.</span
+                >
+                This dual focus allows me to strengthen my technical skills
+                while enhancing my communication abilities in a new cultural
+                environment.
+                <br />
+                <br />
+                <span id="current-status" class="title-span"
+                  >Current Status
+                </span>
+                I am based in Berlin, I am set to complete my studies as a web
+                developer in February 2025.
+                <br />
+                My education at DCI has exposed me to a wide range of web
+                technologies, including HTML, CSS, JavaScript, and various
+                frameworks. <br />
+                I have learned frameworks such as React, Tailwind CSS, and
+                Bootstrap, which have enabled me to develop interactive and
+                responsive web applications.
+                <br />
+                <br />
+                <span id="work-experience-summary" class="title-span"
+                  >Skills and Passion
+                </span>
+                I have a strong passion for front-end development and design.
+                <br />
+                I enjoy creating visually appealing and user-friendly interfaces
+                that provide seamless user experiences.
+                <br />
+                My skills include responsive web design, UI/UX principles, and
+                working with tools like Canva, Figma and PicsArt.
+                <br />
+                I am always eager to learn and explore new technologies to stay
+                updated in this fast-paced industry.
+                <br />
+                <span class="link-span"
+                  >I invite you to review my
+                  <a
+                    href="./Pages/resume-english.html"
+                    target="_blank"
+                    aria-label="See Kathrin Peleds Resume"
+                    ><b>resume</b></a
+                  >
+                  for a comprehensive overview of my qualifications and
+                  experiences.</span
+                >
+                <br />
+                <span id="work-eligibility-and-future-goals" class="title-span"
+                  >Work Experience Summary</span
+                >
+                I’ve built a diverse background in customer support, sales, and
+                data analysis, which has given me valuable insights into what
+                users need and how to meet those needs effectively. <br />
+
+                As a Content Moderator at Majorel in Berlin, I was responsible
+                for ensuring that social media content aligned with community
+                standards. <br />
+                This role sharpened my attention to detail and helped me
+                understand the importance of clear communication online. <br />
+                Before that, I worked at Concentrix as a Customer Support Agent,
+                where I provided technical support to advertisers and business
+                owners. <br />
+                I handled inquiries via chat, email, and calls, helping
+                customers understand how to make the most of their advertising
+                solutions.
+                <br />
+
+                I also took on a freelance role with Proonto on a travel project
+                called Issta, where I responded to customer inquiries in
+                real-time. <br />
+                This job taught me how to manage customer complaints and provide
+                quick solutions in a fast-paced environment. <br />
+
+                Before diving into customer service, I was a Data Analyst at
+                Refinitiv, focusing on the Israeli stock exchange market. <br />
+                I worked on a translation project where I corrected software
+                translations, which helped me hone my analytical skills. <br />
+
+                My earlier experience includes various sales positions at G3
+                Communications Solutions (Celltech LTD), where I managed a team
+                and handled customer relations in a cellular shop. I balanced
+                managing day-to-day operations with providing great service to
+                both private and business customers. <br />
+
+                I also worked at K.S.P Computers and Cellular and Top Mobile,
+                where I focused on sales and customer service, helping customers
+                with everything from purchasing products to resolving issues
+                with returns. <br />
+                This gave me a strong foundation in managing customer
+                experiences and understanding the sales process. <br />
+
+                Overall, my experiences have equipped me with a well-rounded
+                skill set that combines technical knowledge with a strong focus
+                on customer satisfaction. <br />
+                I’m excited to bring this background into my work as a web
+                developer, where I can create user-friendly and effective web
+                applications. <br />
+                <br />
+                <span id="work-eligibility-and-future-goals" class="title-span"
+                  >Work Eligibility and Future Goals
+                </span>
+                As a Portuguese citizen, an EU member state, I am eligible to
+                work immediately without needing additional documents or visas.
+                <br />
+                Upon completing my Weiterbildung at DCI in February 2025, I will
+                be seeking either a two-month internship or a permanent position
+                to begin my professional journey.
+                <br />
+                I am particularly interested in roles that focus on front-end
+                development, where I can contribute my skills while learning
+                from experienced professionals.
+                <br />
+                Additionally, I am open to learning new technologies and
+                techniques related to web development to enhance my skill set
+                and adapt to the evolving industry.
+                <br />
+                <br />
+                <span id="portfolio-and-contact" class="title-span"
+                  >Portfolio and Contact
+                </span>
+                <span class="link-span"
+                  >You can view my portfolio of web development projects
+                  <a
+                    href="./Pages/portfolio-english.html"
+                    target="_blank"
+                    aria-label="See Kathrins Peled portfolio"
+                    ><b>here</b>.</a
+                  >
+                </span>
+                <span class="link-span"
+                  >I invite potential collaborators and employers to
+                  <a
+                    href="./Pages/contact-english.html"
+                    target="_blank"
+                    aria-label="Contact Kathrin Peled"
+                    ><b>contact</b></a
+                  >
+                  me for opportunities that align with my skills and
+                  aspirations.</span
+                >
+
+                <i class="fa-solid fa-quote-right" aria-hidden="true"></i>
+              </p>
+            </div>
             <div class="p_img_2">
               <img
                 src="./Pictures/Graduaion_Technion_2.webp"
